<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.bidding.khela.ui.home.HomeFragment"
        android:label="@string/khela_nav_chart"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.bidding.khela.ui.adminlogin.AdminLoginFragment"
        android:label="@string/khela_nav_admin"
        tools:layout="@layout/fragment_admin_login" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.bidding.khela.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
</navigation>